--- a/src/components/Explicacion/Explicacion.css
+++ b/src/components/Explicacion/Explicacion.css
@@ -1,6 +1,6 @@
 .explicacion-container {
   text-align: center;
-  background-image: url('src/components/Explicacion/fondo R,E,M.png');
+  background-image: url(fondo.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
